tests/ui/traits/const-traits/inherent-impl.stderr
error: inherent impls cannot be `const`
  --> $DIR/inherent-impl.rs:7:12
   |
LL | impl const S {}
   |      ----- ^ inherent impl for this type
   |      |
   |      `const` because of this
   |
   = note: only trait implementations may be annotated with `const`

error: inherent impls cannot be `const`
  --> $DIR/inherent-impl.rs:10:12
   |
LL | impl const dyn T {}
   |      ----- ^^^^^ inherent impl for this type
   |      |
   |      `const` because of this
   |
   = note: only trait implementations may be annotated with `const`

error: aborting due to 2 previous errors

